# deep_learning_with_python_2e

./: .gitignore  README.md  chapter2.py  chapter2_pytorch.py  pyproject.toml  pytorch_intro.py  requirements.txt
chapter2/: get_tf_mnras_dataset.py  keras_basics_and_auto_diff.py  loop_from_scratch.py  mnist_with_pytorch.py  tf.py
chapter3/: tf_keras_api.py  tf_lin_reg.py  tf_tensors.py
chapter4/: 1_IMDB_sentiment.py  1_IMDB_sentiment_pytorch.py  2_Reuters_topics.py  chapter4.py  data_prep.py  data_tf_to_pt.py  helpers.py  plots.py  pt_imdb.py  tf_house_prices.py  tf_imdb.py  tf_reuters.py
